refactor : DTO, entity 정